# huntquest

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/huntquest/: config.py  migrate.py  seed.py
backend/src/huntquest/api/: deps.py  main.py  schemas.py  ws_manager.py
backend/src/huntquest/models/: orm.py
backend/src/huntquest/services/: checkpoints.py  geo.py  join.py  leaderboard.py
backend/src/huntquest/simulator/: run.py  walker.py
backend/src/huntquest/storage/: db.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_rest.py  test_checkpoints.py  test_join_and_leaderboard.py
backend/tests/unit/: test_geo.py  test_walker.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: HuntMap.tsx  Leaderboard.tsx
frontend/src/hooks/: useGeolocation.ts  useHuntSocket.ts
frontend/src/pages/: JoinPage.tsx  MapPage.tsx
k8s/: api-deployment.yaml  api-hpa.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  migrate-job.yaml  namespace.yaml  seed-job.yaml
k8s/local-dev/: postgres.yaml  redis.yaml
scripts/: architecture_diagram.py
